Update to current state of bbr-done-right